[package]
name = "todotui"
version = "0.0.3"
edition = "2021"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "A simple todo terminal app"
readme = "README.md"
homepage = "https://github.com/newfla/todotui"
repository = "https://github.com/newfla/todotui"
keywords = ["todo", "tui", "notes"]
categories = ["command-line-utilities"]

[dependencies]
derive_builder = "0.20.0"
chrono = "0.4.38"
serde = {version = "1.0", features = ["std","rc"]}
postcard = { version = "1.0", features = ["use-std"] }
tuirealm = "1.9.2"
tui-realm-stdlib = "1.3.2"
home = "0.5.9"
clap = {version ="4.5.8", features = ["derive"]}
anyhow = "1.0.86"

[workspace]
