[package]
name = "todotui"
version = "0.0.3"
edition = "2021"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "A simple todo terminal app"
readme = "README.md"
homepage = "https://github.com/newfla/todotui"
repository = "https://github.com/newfla/todotui"
keywords = ["todo", "tui", "notes"]
categories = ["command-line-utilities"]

[dependencies]
derive_builder = "0.20.0"
chrono = "0.4.38"
serde = {version = "1.0", features = ["std","rc"]}
postcard = { version = "1.0", features = ["use-std"] }
tuirealm = "2.0.3"
tui-realm-stdlib = "1.3.2"
home = "0.5.9"
clap = {version ="4.5.8", features = ["derive"]}
anyhow = "1.0.86"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"

# Ignore out-of-date contents
allow-dirty = ["ci"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
