[package]
name = "todotui"
version = "0.0.5"
edition = "2024"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "Apache-2.0"
description = "A simple todo terminal app"
readme = "README.md"
homepage = "https://github.com/newfla/todotui"
repository = "https://github.com/newfla/todotui"
keywords = ["todo", "tui", "notes"]
categories = ["command-line-utilities"]

[dependencies]
derive_builder = "0.20.0"
chrono = "0.4.38"
serde = {version = "1.0", features = ["std","rc"]}
postcard = { version = "1.0", features = ["use-std"] }
tuirealm = "3.0.0"
tui-realm-stdlib = "3.0.0"
home = "0.5.9"
clap = {version ="4.5.8", features = ["derive"]}
anyhow = "1.0.86"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
